Dara: Improve featured slider overlap fix, to make sure it works on sliders with just one slide. See #169.

--- a/dara/style.css
+++ b/dara/style.css
@@ -1468,11 +1468,9 @@ blockquote p:last-child {
 	position: relative;
 }
 .hero-content {
+	padding-bottom: 50.8474576271186%; /* Makes sure slideshow maintains aspect ratio while loading to avoid overlap */
 	position: relative;
 	overflow: hidden;
-}
-.propped-up {
-	padding-bottom: 50.8474576271186%; /* Makes sure slideshow maintains aspect ratio while loading to avoid overlap */
 }
 .hero-content img,
 .thumbnail-placeholder {
